feat(unitTest): Some test has been added add_client test has been added. add_school test test has been added. client enroll_in_school test has been added. client join_enrollment_queue test has been added client leave_school test has been added.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,4 +10,7 @@ services:
     volumes:
       - ../:/app
 
-    command: python -m unittest ../test/test_city_simulation.py
+    command: >
+      bash -c "pip install --no-cache-dir -r requirements.txt &&
+      jupyter nbconvert --to script SIC_Capstone_School.ipynb --output test/CitySimulation &&
+      python -m unittest test/test_city_simulation.py"
